[tool.poetry]
name = "bestpy"
version = "0.0.1"
description = "A module to prove your friends (or adversaries) wrong."
authors = ["Gustav Odinger"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/gustavwilliam/bestpy"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pre-commit = "^2.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
