[tool.poetry]
name = "bestpy"
version = "0.0.5"
description = "A package to find out what's best"
readme = "README.md"
homepage = "https://github.com/gustavwilliam/bestpy"
repository = "https://github.com/gustavwilliam/bestpy"
authors = ["Gustav Odinger"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pre-commit = "^2.9.3"
pytest = "^6.2.1"
coveralls = "^3.3.1"
coverage = "^6.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
